--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ ul {
 }
 
 li {
-	list-style: none !important;
+	list-style: none;
 }
 
 h1,
@@ -573,11 +573,12 @@ input.btn_my_zzk {
 a.layer {
 	font-style: italic;
 	position: absolute;
-	font-size: 2.5rem;
+	font-size: 3.5rem;
 	color: black;
 	opacity: 0.1;
 	bottom: 0;
 	right: 1rem;
+	z-index: 1;
 }
 
 .comment_date {
@@ -585,6 +586,10 @@ a.layer {
 	position: relative;
 	left: 0.5em;
 	color: gray;
+}
+
+.blog_comment_body {
+	margin: 8px;
 }
 
 .comment_vote {
@@ -812,8 +817,6 @@ legend>a::before {
 .sourceCode code pre,
 .sourceCode code span {
 	font-family: "Monaco", "微软雅黑" !important;
-	/*     font-size: 1rem !important; */
-	display: unset;
 }
 
 .sourceCode code {
