--- a/style.css
+++ b/style.css
@@ -931,6 +931,7 @@ legend>a::before {
 
 @media screen and (max-width:1200px) and (min-width:900px) {
 	#main,
+	#mainContent,
     #sideBar,
     #blogTitle h1,
     #blogTitle h2 {
