--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ a.headermaintitle,
     width: 100%;
     height: 3em;
     top: 0;
+    left: 0;
     right: 0;
     overflow: hidden;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
@@ -210,7 +211,7 @@ a.headermaintitle,
 
 #navList li {
     display: inline-block;
-    padding: 0.8em 0;
+    line-height: 3em;
     transition: background-color 0.4s;
 }
 
@@ -307,7 +308,7 @@ a.headermaintitle,
 }
 
 .postSeparator {
-    width: 920px;
+    width: calc(100% + 3rem);
     position: relative;
     right: 1.5rem;
     height: 2rem;
@@ -854,6 +855,14 @@ legend>a::before {
 **************************************************/
 
 @media screen and (max-width:1200px) {
+    #navigator {
+        width: 100%;
+        overflow: scroll;
+    }
+    #navList {
+        margin: 0;
+        width: max-content;
+    }
     body {
         width: 100%;
         overflow-x: hidden;
@@ -861,14 +870,16 @@ legend>a::before {
     #blogTitle h1,
     #blogTitle h2 {
         margin-left: 2rem;
+        width: max-content;
     }
     #main {
         width: 100%;
         padding: 0 1rem;
+        box-sizing: border-box;
     }
     #mainContent,
     #sideBar {
-        width: calc(100% - 2rem);
+        width: 100%;
     }
     .day {
         width: 100%;
